[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Moduler"
description = "Annotation system for boosting intelligence"
version = "0.1.0"
authors = [
    { name = "Zijian Zhang" }
]

dependencies = [
    "pyyaml~=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "plotly==5.16.1",
    "pyhyphen==4.0.3",
]

[tool.setuptools]
packages = ["moduler"]